Fix square spill and add black button
Removed overly complicated formula for square size because it broke
every time I changed something in the CSS and the squares would spill
out of the screen element. Also added a black button to work as an
eraser.

--- a/style.css
+++ b/style.css
@@ -91,6 +91,9 @@ main {
     #ca00fd 92.4%
   );
 }
+#black-btn {
+  background-color: #000000;
+}
 
 .sketch-area {
   background-color: #40454f;
@@ -103,7 +106,7 @@ main {
 }
 
 .screen {
-  background-color: #e1e3e6;
+  background-color: #d2d5da;
   border: solid #4a515d 0.1em;
   display: flex;
   flex-wrap: wrap;
